crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__all_simple_types_snapshot@all_simple_types_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const allTypes = pgTable("all_types", {
  id: integer("id").primaryKey(),
  small: smallint("small").notNull(),
  big: bigint("big", { mode: "number" }).notNull(),
  realNum: real("real_num").notNull(),
  doubleNum: doublePrecision("double_num").notNull(),
  textCol: text("text_col").notNull(),
  boolCol: boolean("bool_col").notNull(),
  dateCol: date("date_col").notNull(),
  timeCol: time("time_col").notNull(),
  tsCol: timestamp("ts_col").notNull(),
  tstzCol: timestamp("tstz_col", { withTimezone: true }).notNull(),
  intervalCol: text("interval_col") /* interval */.notNull(),
  byteaCol: text("bytea_col") /* bytea */.notNull(),
  uuidCol: uuid("uuid_col").notNull(),
  jsonCol: jsonb("json_col").notNull(),
  inetCol: text("inet_col") /* inet */.notNull(),
  cidrCol: text("cidr_col") /* cidr */.notNull(),
  macaddrCol: text("macaddr_col") /* macaddr */.notNull(),
  xmlCol: text("xml_col") /* xml */.notNull(),
});
