crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__complex_types_snapshot@complex_types_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const complexTypes = pgTable("complex_types", {
  id: integer("id").primaryKey(),
  varcharCol: varchar("varchar_col", { length: 100 }).notNull(),
  charCol: char("char_col", { length: 10 }).notNull(),
  numericCol: numeric("numeric_col", { precision: 10, scale: 2 }).notNull(),
  customCol: text("custom_col") /* CUSTOM_TYPE */.notNull(),
});
