crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__composite_constraints_snapshot@composite_constraints_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const orderItems = pgTable("order_items", {
  orderId: integer("order_id").notNull().references(() => orders.id),
  productId: integer("product_id").notNull().references(() => products.id),
  quantity: integer("quantity").notNull(),
}, (t) => ({
  pk: primaryKey({ columns: [t.orderId, t.productId] }),
  uqOrderItemsOrderProduct: unique("uq_order_items__order_product").on(t.orderId, t.productId),
  ixOrderItemsOrderId: index("ix_order_items__order_id").on(t.orderId),
}));

export const orderItemsRelations = relations(orderItems, ({ one, many }) => ({
  order: one(orders, { fields: [orderItems.orderId], references: [orders.id] }),
  product: one(products, { fields: [orderItems.productId], references: [products.id] }),
}));
