crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__composite_index_snapshot@composite_index_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const compositeIndex = pgTable("composite_index", {
  id: integer("id").primaryKey(),
  tenantId: integer("tenant_id").notNull(),
  name: text("name").notNull(),
}, (t) => ({
  idxTenantName: index("idx_tenant_name").on(t.tenantId, t.name),
}));
