crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__composite_pk_snapshot@composite_pk_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const accounts = pgTable("accounts", {
  id: integer("id").notNull(),
  tenantId: bigint("tenant_id", { mode: "number" }).notNull(),
}, (t) => ({
  pk: primaryKey({ columns: [t.id, t.tenantId] }),
}));
