crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__composite_primary_key_snapshot@composite_primary_key_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const membership = pgTable("membership", {
  tenantId: integer("tenant_id").notNull(),
  userId: integer("user_id").notNull(),
  role: text("role").notNull(),
}, (t) => ({
  pk: primaryKey({ columns: [t.tenantId, t.userId] }),
}));
