crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__enum_multiple_columns_snapshot@enum_multiple_columns_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const productCategory = pgEnum("product_category", ["electronics", "clothing", "food"]);

export const availabilityStatus = pgEnum("availability_status", ["in_stock", "out_of_stock", "pre_order"]);

export const products = pgTable("products", {
  id: integer("id").primaryKey(),
  category: productCategory("category").notNull(),
  availability: availabilityStatus("availability").notNull(),
});
